SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

#617 | https://github.com/squirrel-sql-client/squirrel-sql-code/issues/41
  SQL result table: The detail data display now allows to automatically reformat XML or Json data.
  To configure automatic reformatting go to menu File --> Global preferences
  --> tab "Data type controls" --> section General
  Note: For detail data display double click a table cell or switch on cell detail display.
  Furthermore the reformat button was made a toggle button which allows to switch back to the unformatted data.

SQL result table: The find function now allows to narrow the columns to search.

Refactoring: Dropping Foreign Keys is now available by default.
  It is not available only when the dialect definition of an RDBMS explicitly does not support it.
  See Object tree --> Right mouse click on table --> "Refactoring" --> "Referential Integrity" --> "Drop Foreign Key(s)"

SQL editor/SQL result tabs, SQL result tab header marks:
  New check box to configure that only the last matching SQL result tab is marked.
  See menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".

SQL editor/SQL result tabs: SQuirreL now marks SQL result tab headers when the editor's current SQL
  matches the SQL result tab's SQL.
  This feature can be configured and switched of at
  menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".
  The feature furthermore comes with the option to configure the width of SQL result tab headers.

Refactoring Plugin: Now supports dropping imported and exported constraints/foreign keys.
  Before this change only dropping imported constraints/foreign keys was supported.

Hibernate Plugin: HQL result tables offer a find function.
