@@ -23,6 +23,8 @@ GeneralPreferencesPanel.showmainwintoolbar=Show Main Window Toolbar
 GeneralPreferencesPanel.showpluginfiles=Show Plugin files being loaded in Splash Screen
 GeneralPreferencesPanel.useShortSessionTitle=Use short Session tab title (Alias name only)
 GeneralPreferencesPanel.rememberValueOfPopup=Remember value popup size
+GeneralPreferencesPanel.maxCharNumbersInValueOfPopup=Maximum characters to display in value popup (0 for no limit):
+GeneralPreferencesPanel.value.popup.title=Table cell data value popup
 GeneralPreferencesPanel.showSessionStartupTimeHint=Show Session startup time hint
 GeneralPreferencesPanel.showtooltips=Show Tooltips
 GeneralPreferencesPanel.showwindowcontents=Show Window Contents While Dragging
