@@ -2,6 +2,7 @@ package net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent;
 
 import net.sourceforge.squirrel_sql.client.Main;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.ColumnDisplayDefinition;
+import net.sourceforge.squirrel_sql.fw.datasetviewer.TableNameAccess;
 import net.sourceforge.squirrel_sql.fw.util.StringManager;
 import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
 import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
@@ -10,11 +11,8 @@ import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 public class BigDataRenderResult
 {
 
-   public static final int MAX_BYTES_IN_CELL_DETAIL_DISPLAY = 10000;
-
    private static final StringManager s_stringMgr = StringManagerFactory.getStringManager(DataTypeBinary.class);
    private static ILogger s_log = LoggerController.createLogger(BigDataRenderResult.class);
-
 
    private final String _renderResult;
    private final boolean _maxBytesReached;
@@ -37,16 +35,26 @@ public class BigDataRenderResult
 
    public static void showMaxBytesReachedMessage(ColumnDisplayDefinition colDef)
    {
-      String msg = s_stringMgr.getString("BinaryTypeRenderResult.MaxBytesReached", MAX_BYTES_IN_CELL_DETAIL_DISPLAY, colDef.getFullTableColumnName(), colDef.getSqlTypeName());
+      String msg = s_stringMgr.getString("BinaryTypeRenderResult.MaxBytesReached", getMaxCharsInValuePopup(), TableNameAccess.getTableName(colDef), colDef.getSqlTypeName());
       s_log.warn(msg);
       Main.getApplication().getMessageHandler().showWarningMessage(msg);
    }
 
    public static void showStringLenReachedMessage(ColumnDisplayDefinition colDef)
    {
-      String msg = s_stringMgr.getString("BinaryTypeRenderResult.StringLenReached", MAX_BYTES_IN_CELL_DETAIL_DISPLAY, colDef.getFullTableColumnName(), colDef.getSqlTypeName());
+      String msg = s_stringMgr.getString("BinaryTypeRenderResult.StringLenReached", getMaxCharsInValuePopup(), TableNameAccess.getTableName(colDef), colDef.getSqlTypeName());
       s_log.warn(msg);
       Main.getApplication().getMessageHandler().showWarningMessage(msg);
    }
 
+   public static int getMaxCharsInValuePopup()
+   {
+      int ret = Main.getApplication().getSquirrelPreferences().getMaxCharsInValuePopup();
+      if(0 == ret)
+      {
+         return Integer.MAX_VALUE;
+      }
+
+      return ret;
+   }
 }
